@@ -1,17 +1,0 @@
-using System.Reflection;
-using System.Runtime.CompilerServices;
-
-
-[assembly: AssemblyTitle("prj2make-sharp-lib")]
-[assembly: AssemblyDescription("Project and Workspace file type manipulation library")]
-[assembly: AssemblyConfiguration("")]
-[assembly: AssemblyCompany("")]
-[assembly: AssemblyProduct("MonoDevelop")]
-[assembly: AssemblyCopyright("MonoDevelop team")]
-[assembly: AssemblyTrademark("")]
-[assembly: AssemblyCulture("")]
-
-[assembly: AssemblyVersion("0.3.0.0")]
-
-[assembly: AssemblyDelaySign(false)]
-[assembly: AssemblyKeyFile("")]
